text: attenuate claim - timing of games is plausibly random

--- a/TeX/paper/parts/soc_ext_body.tex
+++ b/TeX/paper/parts/soc_ext_body.tex
@@ -6,7 +6,7 @@
 
 
 % STRATEGY & DATA
-The aim of this paper is to undertake an in-depth examination of the effects that public mass gatherings exert on criminal behavior. More specifically, the impact of football games in the framework of the German professional football league system is investigated. To get at the impact of football matches on violent behavior, I employ a generalized difference-in-differences approach that exploits the plausibly random variation in the timing of the football games. I compare the level of assaults on days with and without home games while controlling for any potential source of heterogeneity across days of the week, month, and year, while additionally accounting for other possible confounding variation coming from weather and holidays. In order to use the time-series and cross-sectional variation in the data, I construct a panel at the municipality-day level. I collect and match data from various sources to analyze the effect of 4,461 football games over the period from 2011-2015. First, detailed information on all matches in the first three leagues is obtained via web scraping.\footnote{This includes, but is by far not limited to the time and location of games.} Second, the main outcome variable, the rate of physical assaults, comes from powerful registry data provided by the Federal Criminal Police Office. It covers all individuals that fall victim to a crime against their legally protected rights in the sample regions. Third, data from weather monitors and a time-series of holidays on the federal level are matched to the data to account for possible confounders. Last, population figures from the Federal Statistical Office are merged to construct regression weights and to build the outcome variable. 
+The aim of this paper is to undertake an in-depth examination of the effects that public mass gatherings exert on criminal behavior. More specifically, the impact of football games in the framework of the German professional football league system is investigated. To get at the impact of football matches on violent behavior, I employ a generalized difference-in-differences approach that exploits the variation in the timing of the football games. I compare the level of assaults on days with and without home games while controlling for any potential source of heterogeneity across days of the week, month, and year, while additionally accounting for other possible confounding variation coming from weather and holidays. In order to use the time-series and cross-sectional variation in the data, I construct a panel at the municipality-day level. I collect and match data from various sources to analyze the effect of 4,461 football games over the period from 2011-2015. First, detailed information on all matches in the first three leagues is obtained via web scraping.\footnote{This includes, but is by far not limited to the time and location of games.} Second, the main outcome variable, the rate of physical assaults, comes from powerful registry data provided by the Federal Criminal Police Office. It covers all individuals that fall victim to a crime against their legally protected rights in the sample regions. Third, data from weather monitors and a time-series of holidays on the federal level are matched to the data to account for possible confounders. Last, population figures from the Federal Statistical Office are merged to construct regression weights and to build the outcome variable. 
 
 
 
@@ -57,7 +57,7 @@ The remainder of the paper is structured as follows. The next section provides i
 
 % German Football League System
 \subsection{German Football League System}
-The three full professional divisions of the German football league system are held under the jurisdiction of the German Football Association (DFB) and the German Football League (DFL). While the two top flights `Bundesliga' and `2. Bundesliga' are organized by the DFL, the third division `3. Liga' is run by the DFB itself. Teams can move through the levels of the league system by either promotion or relegation. The two top divisions consist of 18 teams that play 17 home and away games in one season. The third level contains 20 teams with 19 home and away games. The empirical approach of this paper exploits the plausibly random variation in the timing of matches. Since 2006, the preparation of the match schedules for the `Bundesliga' and the `2. Bundesliga' is carried out with a software that uses integer linear programming.\footnote{For details of how the match plans are made, please refer to \href{https://www.bundesliga.com/de/bundesliga/news/so-entsteht-der-spielplan-bundesliga-2-bundesliga-dfl-computer-software.jsp}{https://www.bundesliga.com/de/bundesliga/news/so-entsteht-der-spielplan-bundesliga-2-bundesliga-dfl-computer-software.jsp}} The software outlines the rough details such as the fixtures per matchday. The exact date and time, however, are determined in the course of the season. The late exact scheduling allows to take into account guidelines from local authorities, security bodies, the Central Sports Intelligence Unit (ZIS), international football associations (FIFA/UEFA), fans, clubs, and stadium operators. In addition to obvious restrictions such as the fact that neighboring clubs should play their home matches at a different time, the DFL has to consider public holidays, parallel major events, or match dates of international competitions.
+The three full professional divisions of the German football league system are held under the jurisdiction of the German Football Association (DFB) and the German Football League (DFL). While the two top flights `Bundesliga' and `2. Bundesliga' are organized by the DFL, the third division `3. Liga' is run by the DFB itself. Teams can move through the levels of the league system by either promotion or relegation. The two top divisions consist of 18 teams that play 17 home and away games in one season. The third level contains 20 teams with 19 home and away games. The empirical approach of this paper exploits the variation in the timing of matches. Since 2006, the preparation of the match schedules for the `Bundesliga' and the `2. Bundesliga' is carried out with a software that uses integer linear programming.\footnote{For details of how the match plans are made, please refer to \href{https://www.bundesliga.com/de/bundesliga/news/so-entsteht-der-spielplan-bundesliga-2-bundesliga-dfl-computer-software.jsp}{https://www.bundesliga.com/de/bundesliga/news/so-entsteht-der-spielplan-bundesliga-2-bundesliga-dfl-computer-software.jsp}} The software outlines the rough details such as the fixtures per matchday. The exact date and time, however, are determined in the course of the season. The late exact scheduling allows to take into account guidelines from local authorities, security bodies, the Central Sports Intelligence Unit (ZIS), international football associations (FIFA/UEFA), fans, clubs, and stadium operators. In addition to obvious restrictions such as the fact that neighboring clubs should play their home matches at a different time, the DFL has to consider public holidays, parallel major events, or match dates of international competitions.
 
 
 
@@ -286,7 +286,7 @@ I perform several sensitivity and placebo tests to assess the robustness of the 
 
 
 % Alternative econometrics: sample, weights, estimation
-\textbf{Alternative econometric specifications.--} First, I show that the results are not sensitive to alterations of the \textit{sample}. Adjustments to the sample may be necessary as some of the games are played on different days than what was originally planned. The deviation from the original match plan may pose a risk to the allocation of games that is as good as random. For this reason, I drop the set of rescheduled games from the analysis. The results are almost identical to the baseline results.\footnote{From the 4,461 games in the sample, 2.24 percent are rescheduled. The vast majority of rescheduled matches (95 percent) are in league three.} Second, I show the effects when leaving out population \textit{weights} from the regressions. The effect of football matches without population weights is considerably larger: a home game leads to an increase in the average assault rate by 5.342 assaults per million population. The higher coefficient compared to the baseline specification indicates that the effects of rural areas must be larger, as they obtain higher relevance when population weights are omitted. Third, I show that my results are robust to a different \textit{estimation} procedure and an alternative measure of the \textit{dependent variable}. In the following, I use the raw number of assaults as the outcome variable. Because of the discrete nature of the dependent variable, and given that there are many cells with zero reports, a Poisson model is the model of choice. The corresponding regression specification reads as follows:
+\textbf{Alternative econometric specifications.--} First, I show that the results are not sensitive to alterations of the \textit{sample}. Adjustments to the sample may be necessary as some of the games are played on different days than what was originally planned. The deviation from the original match plan may pose a risk to the allocation of games that is plausibly random. For this reason, I drop the set of rescheduled games from the analysis. The results are almost identical to the baseline results.\footnote{From the 4,461 games in the sample, 2.24 percent are rescheduled. The vast majority of rescheduled matches (95 percent) are in league three.} Second, I show the effects when leaving out population \textit{weights} from the regressions. The effect of football matches without population weights is considerably larger: a home game leads to an increase in the average assault rate by 5.342 assaults per million population. The higher coefficient compared to the baseline specification indicates that the effects of rural areas must be larger, as they obtain higher relevance when population weights are omitted. Third, I show that my results are robust to a different \textit{estimation} procedure and an alternative measure of the \textit{dependent variable}. In the following, I use the raw number of assaults as the outcome variable. Because of the discrete nature of the dependent variable, and given that there are many cells with zero reports, a Poisson model is the model of choice. The corresponding regression specification reads as follows:
 \begin{align}
 E\left[ \text{Assaults}_{rdmy}\right.&|\left.\text{Gameday}_{rdmy},\vartheta_r,\text{date}_{dmy}, \mathbf{X}_{rdmy} \right] \nonumber \\ &= exp\left( \beta\ (\text{Gameday}_{rdmy}) + \vartheta_r + \text{date}_{dmy} + \lambda\mathbf{X}_{rdmy} \right). 
 \label{eq_soc_ext:poisson_model}
@@ -322,7 +322,7 @@ Due to the nonlinearity of the model, the coefficient in Table \ref{tab_soc_ext:
 \section{Concluding remarks}\label{sec_soc_ext:conclusion}
 
 % summary
-In this paper, I analyze the impact of public mass gatherings on criminal behavior. To estimate the causal effects of football games on physical assaults, I use a generalized difference-in-differences approach that exploits the plausibly random variation in the timing of matches. I compare regional assault levels on days with and without matches conditional on the day of the week, month, and year while additionally accounting for potential confounding variation coming from weather and holidays. I match web-scraped information on 4,461 football matches with data on local assault rates, weather, holidays, and population figures to construct a panel at the municipality-day level over the period 2011-2015. I find that a home game increases the average assault rate by 21.5 percent. The victimization rates of males are driving the results and are particularly high for the age group 18-29 years. Besides, the impact is 
+In this paper, I analyze the impact of public mass gatherings on criminal behavior. To estimate the causal effects of football games on physical assaults, I use a generalized difference-in-differences approach that exploits the variation in the timing of matches. I compare regional assault levels on days with and without matches conditional on the day of the week, month, and year while additionally accounting for potential confounding variation coming from weather and holidays. I match web-scraped information on 4,461 football matches with data on local assault rates, weather, holidays, and population figures to construct a panel at the municipality-day level over the period 2011-2015. I find that a home game increases the average assault rate by 21.5 percent. The victimization rates of males are driving the results and are particularly high for the age group 18-29 years. Besides, the impact is 
 larger for victims with no prior relationship to the suspect and completed offenses. There are no offsetting reductions in assaults on adjacent days to the matchday or in nearby regions. When investigating potential channels, I find no evidence that emotional cues are responsible for the spike of assaults on matchdays. Although there is no support for the frustration-aggression hypothesis, I find large effects for prominent games and teams. In fact, this set of results is suggestive for the fact that spectators mimic players' behavior, select into specific matches, or that the pure agglomeration of fans is causing the higher level of assaults on game days. 
 
 
