1) remove term public mass gatherings 2) more info on FAH in intro

--- a/TeX/paper/parts/soc_ext_body.tex
+++ b/TeX/paper/parts/soc_ext_body.tex
@@ -1,12 +1,12 @@
 
 % introductory paragraph
-\lettrine[lines=2,nindent=0pt]{\color{darkgray}\textbf{F}}{ootball} has grown into a respected industry as reflected by high attendance rates and considerable revenues.\footnote{Except where otherwise noted, football refers to the sport also known as soccer.} For instance, the `Bundesliga', the German top league, is a major reason for public mass gatherings and had with 42,700 spectators the highest average attendance per match across all European leagues in the season 2017/18. Also economically speaking, football is synonymous with big business as the `Bundesliga' ranges on second place in Europe with generated revenues of 3.17 billion euros \citep{deloitte2019report}. While being so attractive, the matches of the football industry generate external effects in many dimensions. On the positive side, there are higher expenditures for consumption and ultimately increased local tax revenues. On the negative side, the games induce air and noise pollution, together with a higher frequency of accidents, among others. Violent fan behavior is a particularly pervasive aspect in this context and affects individuals' health, the penal system, and the police. In the season 2017/18, the State and Federal Police accumulated over 2.11 million man-hours to guarantee the spectators' safety surrounding German professional football matches \citep{zis17_18}. There has been a widely noticed legal dispute between the Federal State of Bremen and the German Football League (DFL) about the reimbursement of costs for high-risk games, in which the \cite{fac_2019} declared the charges imposed by Bremen as legitimate. This study does not only focus on mass gatherings, football matches, where social interactions lead to violence, but also deals with the question that is at the heart of the discussion of whether the negative externalities of football games that bring so much prosperity should be absorbed. 
+\lettrine[lines=2,nindent=0pt]{\color{darkgray}\textbf{F}}{ootball} has grown into a respected industry as reflected by high attendance rates and considerable revenues.\footnote{Except where otherwise noted, football refers to the sport also known as soccer.} For instance, the `Bundesliga', the German top league, is a major reason for public mass gatherings and had with 42,700 spectators the highest average attendance per match across all European leagues in the season 2017/18. Also economically speaking, football is synonymous with big business as the `Bundesliga' ranges on second place in Europe with generated revenues of 3.17 billion euros \citep{deloitte2019report}. While being so attractive, the matches of the football industry generate external effects in many dimensions. On the positive side, there are higher expenditures for consumption and ultimately increased local tax revenues. On the negative side, the games induce air and noise pollution, together with a higher frequency of accidents, among others. Violent fan behavior is a particularly pervasive aspect in this context and affects individuals' health, the penal system, and the police. In the season 2017/18, the State and Federal Police accumulated over 2.11 million man-hours to guarantee the spectators' safety surrounding German professional football matches \citep{zis17_18}. There has been a widely noticed legal dispute between the Federal State of Bremen and the German Football League (DFL) about the reimbursement of costs for high-risk games, in which the \cite{fac_2019} declared the charges imposed by Bremen as legitimate. This study does not only focus on football matches, where social interactions lead to violence, but also deals with the question that is at the heart of the discussion of whether the negative externalities of football games that bring so much prosperity should be absorbed. 
 
 
 
 
 % STRATEGY & DATA
-The aim of this paper is to undertake an in-depth examination of the effects that public mass gatherings exert on criminal behavior. More specifically, the impact of football games in the framework of the German professional football league system is investigated. To get at the impact of football matches on violent behavior, I employ a generalized difference-in-differences approach that exploits the variation in the timing of the football games. I compare the level of assaults on days with and without home games while controlling for any potential source of heterogeneity across days of the week, month, and year, while additionally accounting for other possible confounding variation coming from weather and holidays. In order to use the time-series and cross-sectional variation in the data, I construct a panel at the municipality-day level. I collect and match data from various sources to analyze the effect of 4,461 football games over the period from 2011-2015. First, detailed information on all matches in the first three leagues is obtained via web scraping.\footnote{This includes, but is by far not limited to the time and location of games.} Second, the main outcome variable, the rate of physical assaults, comes from powerful registry data provided by the Federal Criminal Police Office. It covers all individuals that fall victim to a crime against their legally protected rights in the sample regions. Third, data from weather monitors and a time-series of holidays on the federal level are matched to the data to account for possible confounders. Last, population figures from the Federal Statistical Office are merged to construct regression weights and to build the outcome variable. 
+The aim of this paper is to undertake an in-depth examination of the effects that football games in the framework of the German professional football league system exert on violent behavior. To get at the causal impact of football matches on physical assaults, I employ a generalized difference-in-differences approach that exploits the variation in the timing of the football games. I compare the level of assaults on days with and without home games while controlling for any potential source of heterogeneity across days of the week, month, and year, while additionally accounting for other possible confounding variation coming from weather and holidays. In order to use the time-series and cross-sectional variation in the data, I construct a panel at the municipality-day level. I collect and match data from various sources to analyze the effect of 4,461 football games over the period from 2011-2015. First, detailed information on all matches in the first three leagues is obtained via web scraping.\footnote{This includes, but is by far not limited to the time and location of games.} Second, the main outcome variable, the rate of physical assaults, comes from powerful registry data provided by the Federal Criminal Police Office. It covers all individuals that fall victim to a crime against their legally protected rights in the sample regions. Third, data from weather monitors and a time-series of holidays on the federal level are matched to the data to account for possible confounders. Last, population figures from the Federal Statistical Office are merged to construct regression weights and to build the outcome variable. 
 
 
 
@@ -16,7 +16,7 @@ I find significant and robust evidence that football matches lead to an increase
 
 
 % channels 
-There are a couple of theories rationalizing spectator violence. For instance, the frustration-aggression hypothesis proposed by \cite{dollard1939frustration}, which relates self-esteem to the outcomes of the game. Another prominent theory is the idea of social learning, in which spectators mimic the behavior displayed on the pitch \citep{bandura1973aggression, bandura2007social}. In my analysis, I test whether the frustration-aggression hypothesis can serve as an explanation for why there are more physical assaults. To do so, I use emotional cues from either emotionally unsettling events during the game or when game outcomes do not align with pregame expectations. In both cases, there is no evidence that would support the frustration-aggression hypothesis. In the second step, I consider game and team prominence as potential channels. I find a three times higher impact on the rate of physical assaults during high-rivalry matches. This higher effect can be associated with mutual dislike of opposing fan groups or by the social learning theory as high-rivalry matches exhibit increased game intensity on the pitch. Furthermore, I find larger effects for the highest tier of the league system, which attracts the most people. Ultimately, I cannot pinpoint the one channel at play, but there is evidence that spectators mimic players' behavior, they select into specific matches, and eventually a mechanic agglomeration effect. 
+There are a couple of theories rationalizing spectator violence. For instance, the frustration-aggression hypothesis, proposed by \cite{dollard1939frustration}, interprets violent behavior as an act to rehabilitate self-esteem after an instigating frustrating event, such as the defeat of one's favorite team. Another prominent theory is the idea of social learning, in which spectators mimic the behavior displayed on the pitch \citep{bandura1973aggression, bandura2007social}. In my analysis, I test whether the frustration-aggression hypothesis can serve as an explanation for why there are more physical assaults. To do so, I use emotional cues from either emotionally unsettling events during the game or when game outcomes do not align with pregame expectations. In both cases, there is no evidence that would support the frustration-aggression hypothesis. In the second step, I consider game and team prominence as potential channels. I find a three times higher impact on the rate of physical assaults during high-rivalry matches. This higher effect can be associated with mutual dislike of opposing fan groups or by the social learning theory as high-rivalry matches exhibit increased game intensity on the pitch. Furthermore, I find larger effects for the highest tier of the league system, which attracts the most people. Ultimately, I cannot pinpoint the one channel at play, but there is evidence that spectators mimic players' behavior, they select into specific matches, and eventually a mechanic agglomeration effect. 
 
 
 
@@ -70,7 +70,8 @@ Spectator violence has a long tradition in the environment of professional footb
 
 
 % THEORIES OF SPECTATOR VIOLENCE
-There are a couple of theories rationalizing spectator violence.\footnote{Theoretically, there could also be a decreasing assault rate due to football games. This may happen if individuals with a higher propensity to act violently attend the matches. \cite{dahl2009movie} find a similar effect for violent movies and name this a `self-incapacitation effect'. Yet, as only hourly data can reveal the effect and the analysis draws on daily data, I focus on theories of why the rate of violence is increasing due to football games.} First, the higher number of assaults could be a mere mechanic effect arising from increased social contacts and a change in how the interactions take place \citep{montolio2019measuring}. For instance, the `Bundesliga' has the highest average attendance per match across all European main football leagues \citep{wicker2017effect}. In the season of 2014/15, more than 42,000 spectators attended on average a game in the highest flight of the German league system. This aspect is particularly relevant for smaller municipalities, which attract thousands of spectators per game \citep{lindo2018college}. Second, instinctual theories of aggression find human aggression genetically based \citep{baron1977human}. In other words, aggressive behavior is an inevitable predisposition. Third, spectator violence may be the result of physiological arousal \citep{branscombe1992role}. Potential determinants of physiological arousal are increased heart-rate, blood pressure, and respiration, which may influence affect, cognition, and (anti-)social behavior. Fourth, \cite{dollard1939frustration} propose the idea of the frustration-aggression hypothesis.\footnote{\cite{berkowitz1989frustration} presents a good overview of the frustration-aggression hypothesis.} If the favorite team suffered a defeat, this may precipitate aggressive fan behavior (e.g. see the results obtained by \cite{card2011family}). Fifth, \cite{bandura1973aggression, bandura2007social} postulates the notion of `social learning' or mimicking behavior. Independent of the outcome of the match, the sheer observation of the game is enough to unleash violent actions. 
+There are a couple of theories rationalizing spectator violence.\footnote{Theoretically, there could also be a decreasing assault rate due to football games. This may happen if individuals with a higher propensity to act violently attend the matches. \cite{dahl2009movie} find a similar effect for violent movies and name this a `self-incapacitation effect'. Yet, as only hourly data can reveal the effect and the analysis draws on daily data, I focus on theories of why the rate of violence is increasing due to football games.} First, the higher number of assaults could be a mere mechanic effect arising from increased social contacts and a change in how the interactions take place \citep{montolio2019measuring}. For instance, the `Bundesliga' has the highest average attendance per match across all European main football leagues \citep{wicker2017effect}. In the season of 2014/15, more than 42,000 spectators attended on average a game in the highest flight of the German league system. This aspect is particularly relevant for smaller municipalities, which attract thousands of spectators per game \citep{lindo2018college}. Second, spectator violence may be the result of physiological arousal \citep{branscombe1992role}. Potential determinants of physiological arousal are increased heart-rate, blood pressure, and respiration, which may influence affect, cognition, and (anti-)social behavior. Third, \cite{dollard1939frustration} propose the idea of the frustration-aggression hypothesis.\footnote{\cite{berkowitz1989frustration} presents a good overview of the frustration-aggression hypothesis.} If the favorite team suffered a defeat, this may precipitate aggressive fan behavior (e.g. see the results obtained by \cite{card2011family}). Fourth, \cite{bandura1973aggression, bandura2007social} postulates the notion of `social learning' or mimicking behavior. Independent of the outcome of the match, the sheer observation of the game is enough to unleash violent actions.
+%Second, instinctual theories of aggression find human aggression genetically based \citep{baron1977human}. In other words, aggressive behavior is an inevitable predisposition. 
 
 
 
@@ -89,7 +90,7 @@ Alcohol plays a crucial role in the context of spectator violence in German foot
 \bigskip
 \section{Data}\label{sec_soc_ext:data} 
 % Description data
-The data set used for the analysis covers the time window 2011-2015 and contains regions in which professional football games take place. The analysis is carried out on the municipality level, the lowest territorial division in Germany. I combine various data sources in order to examine the impact of public mass gatherings on violent behavior.
+The data set used for the analysis covers the time window 2011-2015 and contains regions in which professional football games take place. The analysis is carried out on the municipality level, the lowest territorial division in Germany. I combine various data sources in order to examine the impact of professional football games on violent behavior.
 
 
 
@@ -322,7 +323,7 @@ Due to the nonlinearity of the model, the coefficient in Table \ref{tab_soc_ext:
 \section{Concluding remarks}\label{sec_soc_ext:conclusion}
 
 % summary
-In this paper, I analyze the impact of public mass gatherings on criminal behavior. To estimate the causal effects of football games on physical assaults, I use a generalized difference-in-differences approach that exploits the variation in the timing of matches. I compare regional assault levels on days with and without matches conditional on the day of the week, month, and year while additionally accounting for potential confounding variation coming from weather and holidays. I match web-scraped information on 4,461 football matches with data on local assault rates, weather, holidays, and population figures to construct a panel at the municipality-day level over the period 2011-2015. I find that a home game increases the average assault rate by 21.5 percent. The victimization rates of males are driving the results and are particularly high for the age group 18-29 years. Besides, the impact is 
+In this paper, I analyze the impact of professional football games on violent behavior. To estimate the causal effects of football games on physical assaults, I use a generalized difference-in-differences approach that exploits the variation in the timing of matches. I compare regional assault levels on days with and without matches conditional on the day of the week, month, and year while additionally accounting for potential confounding variation coming from weather and holidays. I match web-scraped information on 4,461 football matches with data on local assault rates, weather, holidays, and population figures to construct a panel at the municipality-day level over the period 2011-2015. I find that a home game increases the average assault rate by 21.5 percent. The victimization rates of males are driving the results and are particularly high for the age group 18-29 years. Besides, the impact is 
 larger for victims with no prior relationship to the suspect and completed offenses. There are no offsetting reductions in assaults on adjacent days to the matchday or in nearby regions. When investigating potential channels, I find no evidence that emotional cues are responsible for the spike of assaults on matchdays. Although there is no support for the frustration-aggression hypothesis, I find large effects for prominent games and teams. In fact, this set of results is suggestive for the fact that spectators mimic players' behavior, select into specific matches, or that the pure agglomeration of fans is causing the higher level of assaults on game days. 
 
 
